# adventofcode2023

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/codespaces/: devcontainer.json
.github/workflows/: python.yml  rust.yml
py/: 02.ipynb  03.ipynb  07.ipynb  1.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  2.ipynb  20.ipynb  21.ipynb  22.ipynb  3.ipynb  4.ipynb  5.ipynb  6.ipynb  7.ipynb  8.ipynb  9.ipynb  README.md  pyproject.toml
py/solutions/: 1-1.py  1-2.py  2-1.py  2-2.py  4-1.py  4-2.py  6-1.py  6-2.py  _template.py  day01_2.py  day02_1.py  day02_2.py  day05_1.py  day06_1.py  day06_2.py  day08_1.py  day09_2.py  day10_1.py  day11_1.py  day11_2.py  day12_1.py  day13_1.py  day14_1.py  day15_1.py  day15_2.py  day16_1.py  day16_2.py  day17_1.py  day17_2.py  day18_1.py  day18_2.py  day19_1.py  day1_1.py  day1_2.py  day3_1.py  day3_2.py  day4_1.py  day4_2.py  day7_1.py  day7_2.py  (+2 more)
py/tests/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day22.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
rs/: Cargo.toml  README.md
rs/src/: utils.rs
