[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Dave Shoup <dave.shoup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.27.1"
# testing
pytest = "^7.4.3"
# debugging
rich = "^13.7.0"
tqdm = "^4.66.1"
# pandas/numpy
numpy = "^1.26.2"
pandas = "^2.1.4"
jinja2 = "^3.1.2"
# plotting
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
geopandas = "^0.14.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100